# PublicMaskBot

./: .gitignore  .python-version  README.md  bot.py  requirements-ci.txt  requirements.txt  setup.cfg
.github/workflows/: pythonapp.yml
