[options]
python_requires = >=3.8
setup_requires =
    setuptools>=41.2.0
install_requires =
    aiogram==2.6.1
    aiohttp==3.6.2
    trafaret==2.0.2
    python-dotenv==0.12.0
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.33.6
    twine>=1.14.0
lint =
    flake8>=3.7.9
typecheck =
    mypy>=0.760

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[mypy]
ignore_missing_imports = true
namespace_packages = true

